@@ -10,6 +10,9 @@ Wed Apr  3 09:57:47 CEST 2002  Pekka Riikonen <priikone@silcnet.org>
 	* Do not check public key types in SKE during rekey.  Affected
 	  file lib/silcske/payload.c.
 
+	* Fixed the rekey protocol with PFS, which was totally broken.
+	  Affected file silcd/protocol.c.
+
 Tue Apr  2 14:55:06 CEST 2002  Pekka Riikonen <priikone@silcnet.org>
 
 	* Some client implementations quit network by doing first LEAVE
